Add StringObject scalar primitive
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ commands:
                 type: string
                 default: ""
         steps:
+            - run: sudo docker-php-ext-install mbstring
             - run: composer update << parameters.composer_flags >> --no-interaction --prefer-source
     run_tests:
         steps:
