--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -18,6 +18,10 @@
     <rule ref="PSR1.Methods.CamelCapsMethodName.NotCamelCaps">
         <exclude-pattern>./tests/*</exclude-pattern>
     </rule>
+    <rule ref="Generic.Files.LineLength.TooLong">
+        <exclude-pattern>./src/Facades/Scalars/StringFacade.php</exclude-pattern>
+        <exclude-pattern>./src/Support/Character.php</exclude-pattern>
+    </rule>
 
     <!-- Custom Rules -->
 
