--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "optimize-autoloader": true
     },
     "require": {
-        "php": "^7.3"
+        "php": "^7.3",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.11",
@@ -31,6 +32,7 @@
         "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
+        "files": ["src/scalar_functions.php"],
         "psr-4": {
             "NorseBlue\\Prim\\": "src/"
         }
