Fix CircleCI config
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
     run_tests:
         steps:
             - run: vendor/bin/phpcs
-            - run: vendor/bin/phpstan
+            - run: vendor/bin/phpstan analyse
             - run: vendor/bin/phpunit
 
 jobs:
