Refactor Facades and add unwrap method to ValueObject
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -9,7 +9,10 @@ parameters:
             path: %currentWorkingDirectory%/tests/Unit/ValueObjectTest.php
         -
             message: '~Static call to instance method NorseBlue\\Prim\\Tests\\_Helpers_\\Facades\\[a-zA-Z0-9_]+::[a-zA-Z0-9_]+\(\).~'
-            path: %currentWorkingDirectory%/tests/Unit/Facade/FacadeTest.php
+            path: %currentWorkingDirectory%/tests/Unit/Facade/ValueObjectFacadeTest.php
         -
             message: '~Parameter #1 $value of class NorseBlue\\Prim\\Scalars\\StringObject constructor expects NorseBlue\\Prim\\Scalars\\StringObject|string, int given.~'
             path: %currentWorkingDirectory%/tests/Unit/Scalars/String/StringObjectTest.php
+        -
+            message: '~Call to an undefined static method NorseBlue\\Prim\\Tests\\_Helpers_\\Facades\\DummyCompleteFacade::nonexistent\(\).~'
+            path: %currentWorkingDirectory%/tests/Unit/Facade/ValueObjectFacadeTest.php
