Add Uuid generation methods to StringObject
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
     },
     "require": {
         "php": "^7.3",
-        "ext-mbstring": "*"
+        "ext-bcmath": "*",
+        "ext-mbstring": "*",
+        "moontoast/math": "^1.1",
+        "ramsey/uuid": "^3.8"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.11",
