Fix CircleCI config
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
         steps:
             - run: sudo apt update
             - run: sudo apt full-upgrade
-            - run: composer self-update
+            - run: sudo composer self-update
             - checkout
     install_php_dependencies:
         parameters:
