--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -11,20 +11,17 @@ parameters:
             message: '~Static call to instance method NorseBlue\\Prim\\Tests\\_Helpers_\\Facades\\[a-zA-Z0-9_]+::[a-zA-Z0-9_]+\(\).~'
             path: %currentWorkingDirectory%/tests/Unit/Facade/ValueObjectFacadeTest.php
         -
-            message: '~Parameter #1 $value of class NorseBlue\\Prim\\Scalars\\StringObject constructor expects NorseBlue\\Prim\\Scalars\\StringObject|string, int given.~'
-            path: %currentWorkingDirectory%/tests/Unit/Scalars/StringObjectTest.php
-        -
             message: '~Call to an undefined static method NorseBlue\\Prim\\Tests\\_Helpers_\\Facades\\DummyCompleteFacade::nonexistent\(\).~'
             path: %currentWorkingDirectory%/tests/Unit/Facade/ValueObjectFacadeTest.php
-
         -
-            message: '~Parameter #1 $value of class NorseBlue\\Prim\\Scalars\\BoolObject constructor expects bool|NorseBlue\\Prim\\Scalars\\BoolObject, int given.~'
+            message: '~Parameter #1 \$value of class NorseBlue\\Prim\\Scalars\\BoolObject constructor expects [a-zA-z0-9_\|\\]+, int given.~'
             path: %currentWorkingDirectory%/tests/Unit/Scalars/BoolObjectTest.php
-
         -
-            message: '~Parameter #1 $value of class NorseBlue\\Prim\\Scalars\\IntObject constructor expects int|NorseBlue\\Prim\\Scalars\\IntObject, string given.~'
-            path: %currentWorkingDirectory%/tests/Unit/Scalars/IntObjectTest.php
-
-        -
-            message: '~Parameter #1 $value of class NorseBlue\\Prim\\Scalars\\FloatObject constructor expects float|NorseBlue\\Prim\\Scalars\\FloatObject, string given.~'
+            message: '~Parameter #1 \$value of class NorseBlue\\Prim\\Scalars\\FloatObject constructor expects [a-zA-z0-9_\|\\]+, string given.~'
             path: %currentWorkingDirectory%/tests/Unit/Scalars/FloatObjectTest.php
+        -
+            message: '~Parameter #1 \$value of class NorseBlue\\Prim\\Scalars\\IntObject constructor expects [a-zA-z0-9_\|\\]+, string given.~'
+            path: %currentWorkingDirectory%/tests/Unit/Scalars/IntObjectTest.php
+        -
+            message: '~Parameter #1 \$value of class NorseBlue\\Prim\\Scalars\\StringObject constructor expects [a-zA-z0-9_\|\\]+, int given.~'
+            path: %currentWorkingDirectory%/tests/Unit/Scalars/StringObjectTest.php
