Add DotArray implementation
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "require": {
         "php": "^7.3",
         "ext-bcmath": "*",
+        "ext-json": "*",
         "ext-mbstring": "*",
         "moontoast/math": "^1.1",
         "ramsey/uuid": "^3.8"
