--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "moontoast/math": "^1.1",
+        "norse-blue/extensible-objects": "^0.1.0",
         "ramsey/uuid": "^3.8"
     },
     "require-dev": {
@@ -35,7 +36,10 @@
         "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
-        "files": ["src/scalar_functions.php"],
+        "files": [
+            "src/scalar_functions.php",
+            "src/Extensions/register_extensions.php"
+        ],
         "psr-4": {
             "NorseBlue\\Prim\\": "src/"
         }
