--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -25,3 +25,6 @@ parameters:
         -
             message: '~Parameter #1 \$value of class NorseBlue\\Prim\\Scalars\\StringObject constructor expects [a-zA-z0-9_\|\\]+, int given.~'
             path: %currentWorkingDirectory%/tests/Unit/Scalars/StringObjectTest.php
+        -
+            message: '~Call to an undefined method Exception::getPregError[a-zA-z0-9_\|\\]+\(\).~'
+            path: %currentWorkingDirectory%/tests/Unit/Scalars/String/StringRegexMatchesTest.php
