Move extensions namespace
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
     },
     "autoload": {
         "files": [
-            "src/scalar_functions.php",
-            "src/Extensions/register_extensions.php"
+            "src/register_extensions.php",
+            "src/scalar_functions.php"
         ],
         "psr-4": {
             "NorseBlue\\Prim\\": "src/"
