Add SimpleArray class
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "autoload": {
         "files": [
             "src/register_extensions.php",
-            "src/scalar_functions.php"
+            "src/scalar_functions.php",
+            "src/collection_functions.php"
         ],
         "psr-4": {
             "NorseBlue\\Prim\\": "src/"
