--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -19,7 +19,12 @@
         <exclude-pattern>./tests/*</exclude-pattern>
     </rule>
     <rule ref="Generic.Files.LineLength.TooLong">
+        <exclude-pattern>./src/Facades/Scalars/BoolFacade.php</exclude-pattern>
+        <exclude-pattern>./src/Facades/Scalars/FloatFacade.php</exclude-pattern>
+        <exclude-pattern>./src/Facades/Scalars/IntFacade.php</exclude-pattern>
         <exclude-pattern>./src/Facades/Scalars/StringFacade.php</exclude-pattern>
+        <exclude-pattern>./src/Scalars/FloatObject.php</exclude-pattern>
+        <exclude-pattern>./src/Scalars/IntObject.php</exclude-pattern>
         <exclude-pattern>./src/Scalars/StringObject.php</exclude-pattern>
         <exclude-pattern>./src/Support/Character.php</exclude-pattern>
     </rule>
