--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "ramsey/uuid": "^3.8"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11",
+        "nunomaduro/phpinsights": "^1.0",
+        "phpstan/phpstan": "^0.11.5",
         "phpunit/phpunit": "^8.1",
         "squizlabs/php_codesniffer": "^3.4"
     },
@@ -58,6 +59,9 @@
             "composer style-check",
             "composer analyse",
             "composer test"
+        ],
+        "insights": [
+            "vendor/bin/phpinsights --ansi"
         ],
         "style-check": [
             "vendor/bin/phpcs"
