--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -19,6 +19,7 @@
         <exclude-pattern>./tests/*</exclude-pattern>
     </rule>
     <rule ref="Generic.Files.LineLength.TooLong">
+        <exclude-pattern>./tests/*</exclude-pattern>
         <exclude-pattern>./src/Facades/Scalars/BoolFacade.php</exclude-pattern>
         <exclude-pattern>./src/Facades/Scalars/FloatFacade.php</exclude-pattern>
         <exclude-pattern>./src/Facades/Scalars/IntFacade.php</exclude-pattern>
