--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -27,6 +27,7 @@
         <exclude-pattern>./src/Facades/Scalars/StringFacade.php</exclude-pattern>
         <exclude-pattern>./src/Scalars/Extensions/Numeric/NumericPadExtension.php</exclude-pattern>
         <exclude-pattern>./src/Scalars/Extensions/String/StringPadExtension.php</exclude-pattern>
+        <exclude-pattern>./src/Scalars/Extensions/String/StringRegexReplaceExtension.php</exclude-pattern>
         <exclude-pattern>./src/Scalars/FloatObject.php</exclude-pattern>
         <exclude-pattern>./src/Scalars/IntObject.php</exclude-pattern>
         <exclude-pattern>./src/Scalars/NumericObject.php</exclude-pattern>
