--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-bcmath": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "doctrine/inflector": "^1.3",
         "moontoast/math": "^1.1",
         "norse-blue/extensible-objects": "^0.3",
         "ramsey/uuid": "^3.8"
