--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@
 /.scrutinizer.yml export-ignore
 /.styleci.yml export-ignore
 /.travis.yml export-ignore
+/phpinsights.php export-ignore
 /phpstan.neon.dist export-ignore
 /phpunit.xml.dist export-ignore
 /tests export-ignore
