Make some fails not break the build
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,15 +27,33 @@ commands:
             - run: ./cc-test-reporter before-build
     run_tests:
         steps:
-            - run: (composer style-check ; exit 0)
-            - run: (composer analyse ; exit 0)
-            - run: (composer insights ; exit 0)
+            - run:
+                command: |
+                  set +eo pipefail    # Do not fail the build if this command fails
+                  composer style-check | exit 0
+            - run:
+                command: |
+                  set +eo pipefail    # Do not fail the build if this command fails
+                  composer analyse | exit 0
+            - run:
+                command: |
+                  set +eo pipefail    # Do not fail the build if this command fails
+                  composer insights | exit 0
             - run: composer test
     run_tests_coverage:
         steps:
-            - run: (composer style-check ; exit 0)
-            - run: (composer analyse ; exit 0)
-            - run: (composer insights ; exit 0)
+            - run:
+                command: |
+                  set +eo pipefail    # Do not fail the build if this command fails
+                  composer style-check | exit 0
+            - run:
+                command: |
+                  set +eo pipefail    # Do not fail the build if this command fails
+                  composer analyse | exit 0
+            - run:
+                command: |
+                  set +eo pipefail    # Do not fail the build if this command fails
+                  composer insights | exit 0
             - run: composer test-coverage
             - run: ./cc-test-reporter format-coverage --input-type clover --output build/code-climate-coverage.json build/coverage.xml
             - store_artifacts:
