Add composer insights to composer check script
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "check": [
             "composer style-check",
             "composer analyse",
-            "composer test"
+            "composer test",
+            "composer insights"
         ],
         "insights": [
             "vendor/bin/phpinsights --ansi --no-interaction"
