Refactor config files
# Explain why this change is being made

# Provide links to any relevant tickets, articles or other resources

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,9 @@
         <testsuite name="Facades">
             <directory suffix="Test.php">./tests/Facades</directory>
         </testsuite>
+        <testsuite name="Functions">
+            <directory suffix="Test.php">./tests/Functions</directory>
+        </testsuite>
         <testsuite name="Types">
             <directory suffix="Test.php">./tests/Types</directory>
         </testsuite>
