--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -3,8 +3,10 @@
     <description>PSR2 based ruleset</description>
 
     <!-- Config -->
+    <config name="colors" value="1" />
     <config name="ignore_errors_on_exit" value ="1" />
     <config name="ignore_warnings_on_exit" value ="1" />
+    <config name="show_progress" value="1" />
 
     <!-- Arguments -->
     <!--<arg name="report" value="summary"/>-->
@@ -14,25 +16,11 @@
     <arg value="sp" />
 
     <!-- Base ruleset -->
-    <rule ref="PSR2" />
+    <rule ref="PSR2">
+        <exclude name="Generic.Files.LineLength" />
+    </rule>
     <rule ref="PSR1.Methods.CamelCapsMethodName.NotCamelCaps">
         <exclude-pattern>./tests/*</exclude-pattern>
-    </rule>
-    <rule ref="Generic.Files.LineLength.TooLong">
-        <exclude-pattern>./tests/*</exclude-pattern>
-        <exclude-pattern>./src/Facades/Scalars/BoolFacade.php</exclude-pattern>
-        <exclude-pattern>./src/Facades/Scalars/FloatFacade.php</exclude-pattern>
-        <exclude-pattern>./src/Facades/Scalars/IntFacade.php</exclude-pattern>
-        <exclude-pattern>./src/Facades/Scalars/NumericFacade.php</exclude-pattern>
-        <exclude-pattern>./src/Facades/Scalars/StringFacade.php</exclude-pattern>
-        <exclude-pattern>./src/Extensions/Scalars/Numeric/NumericPadExtension.php</exclude-pattern>
-        <exclude-pattern>./src/Extensions/Scalars/String/StringPadExtension.php</exclude-pattern>
-        <exclude-pattern>./src/Extensions/Scalars/String/StringRegexReplaceExtension.php</exclude-pattern>
-        <exclude-pattern>./src/Types/Scalars/FloatObject.php</exclude-pattern>
-        <exclude-pattern>./src/Types/Scalars/IntObject.php</exclude-pattern>
-        <exclude-pattern>./src/Types/Scalars/NumericObject.php</exclude-pattern>
-        <exclude-pattern>./src/Types/Scalars/StringObject.php</exclude-pattern>
-        <exclude-pattern>./src/Support/Character.php</exclude-pattern>
     </rule>
 
     <!-- Custom Rules -->
