--- a/composer.json
+++ b/composer.json
@@ -58,8 +58,8 @@
         "check": [
             "composer style-check",
             "composer analyse",
-            "composer test",
-            "composer insights"
+            "composer insights",
+            "composer test"
         ],
         "insights": [
             "vendor/bin/phpinsights --ansi --no-interaction"
